--- a/package.json
+++ b/package.json
@@ -29,15 +29,20 @@
   "dependencies": {
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
+    "babel-plugin-syntax-object-rest-spread": "^6.5.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "bluebird": "^3.3.5",
     "colors": "^1.1.2",
+    "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "glob": "^7.0.3",
     "gulp": "^3.9.1",
     "install": "^0.6.1",
+    "node-sass": "^3.6.0",
     "npm": "^3.8.6",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.15"
   }
 }
