--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "node-sass": "^3.6.0",
     "npm": "^3.8.6",
     "sass-loader": "^3.2.0",
+    "shelljs": "^0.7.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.15"
   }
