--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "bluebird": "^3.3.5",
+    "clean-webpack-plugin": "^0.1.9",
     "colors": "^1.1.2",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "glob": "^7.0.3",
     "gulp": "^3.9.1",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.15.0",
     "install": "^0.6.1",
     "node-sass": "^3.6.0",
     "npm": "^3.8.6",
