可配置cdn地址，替换静态资源url

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "test": "test"
     },
     "scripts": {
-        "jsdoc": "gulp --gulpfile build/build.doc.js",
-        "build:doc": "npm run jsdoc",
+        "doc": "gulp --gulpfile build/build.doc.js",
+        "build:doc": "npm run doc",
         "test": "test"
     },
     "repository": {
