--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
     "babel-plugin-syntax-object-rest-spread": "^6.5.0",
+    "babel-polyfill": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "bluebird": "^3.3.5",
@@ -45,6 +46,9 @@
     "html-webpack-plugin": "^2.15.0",
     "image-webpack-loader": "^1.8.0",
     "install": "^0.6.1",
+    "koa": "^2.0.0",
+    "koa-static": "^2.0.0",
+    "koa-webpack-middleware": "^1.0.1",
     "node-sass": "^3.6.0",
     "npm": "^3.8.6",
     "ora": "^0.2.1",
@@ -52,7 +56,8 @@
     "shelljs": "^0.7.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.15"
+    "webpack": "^1.12.15",
+    "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
