--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "image-webpack-loader": "^1.8.0",
     "install": "^0.6.1",
     "koa": "^2.0.0",
+    "koa-mount": "^1.3.0",
     "koa-router": "^5.4.0",
     "koa-static": "^2.0.0",
     "koa-webpack-middleware": "^1.0.1",
