--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "gulp": "^3.9.1",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.15.0",
-    "html-webpack-replaceurl-plugin": ">=0.0.6",
+    "html-webpack-replaceurl-plugin": "0.0.7",
     "image-webpack-loader": "^1.8.0",
     "install": "^0.6.1",
     "koa": "^2.0.0",
