--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "sass-loader": "^3.2.0",
     "shelljs": "^0.7.0",
     "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.1.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.15",
     "webpack-dev-server": "^1.14.1",
