--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "colors": "^1.1.2",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "favicons-webpack-plugin": "0.0.6",
     "file-loader": "^0.8.5",
     "glob": "^7.0.3",
     "html-loader": "^0.4.3",
