--- a/package.json
+++ b/package.json
@@ -44,13 +44,14 @@
     "glob": "^7.0.3",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.15.0",
-    "html-webpack-replaceurl-plugin": "0.0.9",
+    "html-webpack-replaceurl-plugin": "^1.0.0",
     "image-webpack-loader": "^1.8.0",
     "install": "^0.6.1",
     "koa": "^2.0.0",
     "koa-mount": "^1.3.0",
     "koa-static": "^2.0.0",
     "koa-webpack-middleware": "^1.0.1",
+    "lodash": "^4.13.1",
     "node-sass": "^3.6.0",
     "npm": "^3.8.6",
     "ora": "^0.2.1",
