--- a/package.json
+++ b/package.json
@@ -27,17 +27,13 @@
   },
   "homepage": "https://github.com/ihardcoder/boi-kernel#readme",
   "dependencies": {
-    "babel-core": "^6.7.7",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-syntax-object-rest-spread": "^6.5.0",
-    "babel-plugin-transform-object-assign": "^6.8.0",
-    "babel-polyfill": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-polyfill": "^6.9.1",
     "bluebird": "^3.3.5",
     "clean-webpack-plugin": "^0.1.9",
     "colors": "^1.1.2",
     "css-loader": "^0.23.1",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "favicons-webpack-plugin": "0.0.6",
     "file-loader": "^0.8.5",
@@ -47,22 +43,17 @@
     "html-webpack-replaceurl-plugin": "^1.0.0",
     "image-webpack-loader": "^1.8.0",
     "install": "^0.6.1",
-    "koa": "^2.0.0",
-    "koa-mount": "^1.3.0",
-    "koa-static": "^2.0.0",
-    "koa-webpack-middleware": "^1.0.1",
     "lodash": "^4.13.1",
-    "node-sass": "^3.6.0",
+    "md5": "^2.1.0",
     "npm": "^3.8.6",
     "ora": "^0.2.1",
-    "sass-loader": "^3.2.0",
     "shelljs": "^0.7.0",
     "style-loader": "^0.13.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^2.1.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.15",
+    "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.12.1",
     "webpack-md5-hash": "0.0.5",
     "webpack-srcmap-plugin": "0.0.2"
   },
