--- a/package.json
+++ b/package.json
@@ -29,14 +29,15 @@
   "dependencies": {
     "babel-polyfill": "^6.9.1",
     "bluebird": "^3.3.5",
+    "chalk": "^1.1.3",
     "clean-webpack-plugin": "^0.1.9",
-    "colors": "^1.1.2",
     "css-loader": "^0.23.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "favicons-webpack-plugin": "0.0.6",
     "file-loader": "^0.8.5",
+    "ftp": "^0.3.10",
     "glob": "^7.0.3",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.15.0",
