--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "bluebird": "^3.3.5",
+    "boi-plugin-aux-autoinstall": "0.0.1",
     "clean-webpack-plugin": "^0.1.9",
     "colors": "^1.1.2",
     "css-loader": "^0.23.1",
