--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
   },
   "homepage": "https://github.com/ihardcoder/boi-kernel#readme",
   "dependencies": {
-    "babel-polyfill": "^6.9.1",
+    "babel-core": "^6.7.7",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-syntax-object-rest-spread": "^6.5.0",
+    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-polyfill": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.5.0",
     "bluebird": "^3.3.5",
-    "chalk": "^1.1.3",
     "clean-webpack-plugin": "^0.1.9",
+    "colors": "^1.1.2",
     "css-loader": "^0.23.1",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "favicons-webpack-plugin": "0.0.6",
     "file-loader": "^0.8.5",
