--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/ihardcoder/boi-kernel#readme",
   "dependencies": {
     "babel-core": "^6.7.7",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-syntax-object-rest-spread": "^6.5.0",
     "babel-plugin-transform-object-assign": "^6.8.0",
@@ -35,9 +36,19 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "bluebird": "^3.3.5",
+    "boi-plugin-aux-autoinstall": "^0.0.1",
+    "chalk": "^1.1.3",
     "clean-webpack-plugin": "^0.1.9",
     "colors": "^1.1.2",
     "css-loader": "^0.23.1",
+    "es6-weak-map": "^2.0.1",
+    "escope": "^3.6.0",
+    "eslint": "^3.5.0",
+    "eslint-config-airbnb-base": "^7.1.0",
+    "eslint-loader": "^1.5.0",
+    "eslint-plugin-import": "^1.15.0",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "favicons-webpack-plugin": "0.0.6",
     "file-loader": "^0.8.5",
@@ -63,6 +74,7 @@
     "webpack-srcmap-plugin": "0.0.2"
   },
   "devDependencies": {
+    "eslint-friendly-formatter": "^2.0.6",
     "gulp": "^3.9.1",
     "gulp-jsdoc3": "^0.2.1"
   }
