--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "bluebird": "^3.3.5",
+    "boi-aux-rule-eslint": "^0.0.1",
     "boi-plugin-aux-autoinstall": "^0.0.1",
     "chalk": "^1.1.3",
     "clean-webpack-plugin": "^0.1.9",
@@ -46,6 +47,7 @@
     "eslint": "^3.5.0",
     "eslint-config-airbnb-base": "^7.1.0",
     "eslint-loader": "^1.5.0",
+    "eslint-plugin-html": "^1.5.2",
     "eslint-plugin-import": "^1.15.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.0",
@@ -53,18 +55,20 @@
     "favicons-webpack-plugin": "0.0.6",
     "file-loader": "^0.8.5",
     "ftp": "^0.3.10",
-    "glob": "^7.0.3",
+    "glob": "^7.0.6",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.15.0",
-    "html-webpack-replaceurl-plugin": "^1.0.0",
+    "html-webpack-plugin-htmlhint": "0.0.1",
+    "html-webpack-plugin-replaceurl": "^1.0.0",
     "image-webpack-loader": "^1.8.0",
-    "install": "^0.6.1",
+    "install": "^0.8.1",
     "lodash": "^4.13.1",
     "md5": "^2.1.0",
-    "npm": "^3.8.6",
+    "npm": "^3.10.7",
     "ora": "^0.2.1",
     "shelljs": "^0.7.0",
     "style-loader": "^0.13.1",
+    "stylelint-webpack-plugin": "^0.3.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.15",
     "webpack-dev-middleware": "^1.6.1",
