--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "install": "^0.8.1",
     "lodash": "^4.13.1",
     "md5": "^2.1.0",
+    "nock": "^8.0.0",
     "npm": "^3.10.7",
     "ora": "^0.2.1",
     "shelljs": "^0.7.0",
