--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "bluebird": "^3.3.5",
-    "boi-aux-rule-eslint": "^0.0.1",
-    "boi-plugin-aux-autoinstall": "^0.0.1",
+    "boi-aux-autoinstall": "0.0.2",
+    "boi-aux-rule-eslint": "^0.0.2",
+    "boi-aux-rule-stylelint": "0.0.1",
     "chalk": "^1.1.3",
     "clean-webpack-plugin": "^0.1.9",
     "colors": "^1.1.2",
