--- a/package.json
+++ b/package.json
@@ -27,60 +27,49 @@
   },
   "homepage": "https://github.com/ihardcoder/boi-kernel#readme",
   "dependencies": {
-    "babel-core": "^6.7.7",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-syntax-object-rest-spread": "^6.5.0",
+    "babel-core": "^6.17.0",
+    "babel-eslint": "^7.0.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-object-assign": "^6.8.0",
-    "babel-polyfill": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "bluebird": "^3.3.5",
-    "boi-aux-autoinstall": "0.0.2",
-    "boi-aux-rule-eslint": "^0.0.2",
-    "boi-aux-rule-stylelint": "0.0.1",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "bluebird": "^3.4.6",
+    "boi-aux-autoinstall": "^0.0.2",
+    "boi-aux-rule-eslint": "0.0.4",
     "chalk": "^1.1.3",
-    "clean-webpack-plugin": "^0.1.9",
-    "colors": "^1.1.2",
-    "css-loader": "^0.23.1",
-    "es6-weak-map": "^2.0.1",
-    "escope": "^3.6.0",
-    "eslint": "^3.5.0",
-    "eslint-config-airbnb-base": "^7.1.0",
+    "clean-webpack-plugin": "^0.1.11",
+    "css-loader": "^0.25.0",
+    "eslint": "^3.7.1",
+    "eslint-friendly-formatter": "^2.0.6",
     "eslint-loader": "^1.5.0",
-    "eslint-plugin-html": "^1.5.2",
-    "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-html": "^1.5.3",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "favicons-webpack-plugin": "0.0.6",
-    "file-loader": "^0.8.5",
+    "favicons-webpack-plugin": "^0.0.7",
+    "file-loader": "^0.9.0",
     "ftp": "^0.3.10",
-    "glob": "^7.0.6",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.15.0",
-    "html-webpack-plugin-htmlhint": "0.0.1",
-    "html-webpack-plugin-replaceurl": "^1.0.0",
-    "image-webpack-loader": "^1.8.0",
-    "install": "^0.8.1",
-    "lodash": "^4.13.1",
-    "md5": "^2.1.0",
-    "nock": "^8.0.0",
-    "npm": "^3.10.7",
-    "ora": "^0.2.1",
-    "shelljs": "^0.7.0",
+    "glob": "^7.1.1",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.22.0",
+    "html-webpack-plugin-htmlhint": "^0.0.1",
+    "html-webpack-plugin-replaceurl": "^1.0.1",
+    "image-webpack-loader": "^2.0.0",
+    "lodash": "^4.16.4",
+    "shelljs": "^0.7.4",
     "style-loader": "^0.13.1",
-    "stylelint-webpack-plugin": "^0.3.1",
+    "stylelint-webpack-plugin": "^0.4.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.15",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.12.1",
-    "webpack-md5-hash": "0.0.5",
-    "webpack-srcmap-plugin": "0.0.2"
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.8.3",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.12.2",
+    "webpack-md5-hash": "^0.0.5",
+    "webpack-srcmap-plugin": "^0.0.2"
   },
   "devDependencies": {
-    "eslint-friendly-formatter": "^2.0.6",
     "gulp": "^3.9.1",
     "gulp-jsdoc3": "^0.2.1"
   }
