--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "bluebird": "^3.4.6",
-    "boi-aux-autoinstall": "0.0.2",
+    "boi-aux-autoinstall": "^0.0.3",
     "boi-aux-rule-eslint": "0.0.4",
     "chalk": "^1.1.3",
     "clean-webpack-plugin": "^0.1.11",
@@ -45,6 +45,7 @@
     "eslint-friendly-formatter": "^2.0.6",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-html": "^1.5.3",
+    "eslint-plugin-import": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -54,7 +55,7 @@
     "glob": "^7.1.1",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.22.0",
-    "html-webpack-plugin-htmlhint": "^0.0.1",
+    "html-webpack-plugin-htmlhint": "^0.0.2",
     "html-webpack-plugin-replaceurl": "^1.0.1",
     "image-webpack-loader": "^2.0.0",
     "lodash": "^4.16.4",
