--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "webpack-dev-middleware": "^1.8.3",
     "webpack-dev-server": "^1.16.2",
     "webpack-hot-middleware": "^2.12.2",
-    "webpack-md5-hash": "^0.0.5",
+    "webpack-split-hash": "0.0.1",
     "webpack-srcmap-plugin": "^0.0.2"
   },
   "devDependencies": {
