--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "html-webpack-plugin-replaceurl": "^1.0.2",
     "image-webpack-loader": "^2.0.0",
     "lodash": "^4.16.4",
+    "postcss-loader": "^1.1.0",
+    "postcss-sprites": "^4.0.0",
     "shelljs": "^0.7.4",
     "style-loader": "^0.13.1",
     "stylelint-webpack-plugin": "^0.4.0",
