单html入口时域名可直接可访问

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   },
   "keywords": [
     "boi",
-    "frent-end",
-    "node",
+    "frontend",
     "webpack"
   ],
   "author": "zhoujunpeng",
