--- a/package.json
+++ b/package.json
@@ -3,13 +3,7 @@
   "version": "1.3.0",
   "description": "kernel features of boi",
   "main": "lib/index.js",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "doc": "gulp --gulpfile build/build.doc.js",
-    "build:doc": "npm run doc"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ihardcoder/boi-kernel.git"
@@ -59,6 +53,7 @@
     "html-webpack-plugin-replaceurl": "^1.0.3",
     "image-webpack-loader": "^2.0.0",
     "lodash": "^4.16.4",
+    "ora": "^1.1.0",
     "postcss-loader": "^1.1.0",
     "postcss-sprites": "^4.0.0",
     "shelljs": "^0.7.4",
@@ -72,8 +67,5 @@
     "webpack-split-hash": "0.0.1",
     "webpack-srcmap-plugin": "^0.0.2"
   },
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-jsdoc3": "^0.2.1"
-  }
+  "devDependencies": {}
 }
