--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "homepage": "https://github.com/ihardcoder/boi-kernel#readme",
   "dependencies": {
     "babel-core": "^6.17.0",
-    "babel-eslint": "^7.0.0",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.5",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-object-assign": "^6.8.0",
@@ -29,17 +29,18 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "bluebird": "^3.4.6",
-    "boi-aux-autoinstall": "^0.0.3",
+    "boi-aux-autoinstall": "^0.1.0",
     "boi-aux-rule-eslint": "0.0.4",
+    "boi-aux-rule-htmlhint": "0.0.1",
     "chalk": "^1.1.3",
     "chunk-manifest-webpack-plugin": "^0.1.0",
     "clean-webpack-plugin": "^0.1.11",
     "css-loader": "^0.25.0",
-    "eslint": "^3.7.1",
-    "eslint-friendly-formatter": "^2.0.6",
-    "eslint-loader": "^1.5.0",
-    "eslint-plugin-html": "^1.5.3",
-    "eslint-plugin-import": "^2.0.1",
+    "eslint": "^3.16.1",
+    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-loader": "^1.6.3",
+    "eslint-plugin-html": "^2.0.1",
+    "eslint-plugin-import": "^2.2.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -58,7 +59,6 @@
     "postcss-sprites": "^4.0.0",
     "shelljs": "^0.7.4",
     "style-loader": "^0.13.1",
-    "stylelint-webpack-plugin": "^0.4.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
