--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "boi-aux-rule-htmlhint": "0.0.1",
     "chalk": "^1.1.3",
     "chunk-manifest-webpack-plugin": "^0.1.0",
+    "cli-table2": "^0.2.0",
     "css-loader": "^0.25.0",
     "eslint": "^3.16.1",
     "eslint-friendly-formatter": "^2.0.7",
