--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "inquirer": "^3.0.6",
     "lodash": "^4.16.4",
     "ora": "^1.1.0",
-    "postcss-loader": "^1.1.0",
+    "postcss": "^5.2.16",
+    "postcss-loader": "^1.3.3",
     "postcss-sprites": "^4.0.0",
     "shelljs": "^0.7.4",
     "ssh2": "^0.5.4",
