--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "babel-core": "^6.17.0",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.5",
+    "babel-loader": "^7.0.0",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-polyfill": "^6.16.0",
@@ -35,42 +35,42 @@
     "boi-aux-rule-eslint": "0.0.4",
     "boi-aux-rule-htmlhint": "0.0.1",
     "chalk": "^1.1.3",
-    "chunk-manifest-webpack-plugin": "^0.1.0",
     "cli-table2": "^0.2.0",
-    "css-loader": "^0.25.0",
+    "css-loader": "^0.28.4",
     "eslint": "^3.16.1",
-    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.6.3",
     "eslint-plugin-html": "^2.0.1",
     "eslint-plugin-import": "^2.2.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.1.2",
     "favicons-webpack-plugin": "^0.0.7",
-    "file-loader": "^0.9.0",
+    "file-loader": "^0.11.2",
     "ftp": "^0.3.10",
     "glob": "^7.1.1",
     "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.22.0",
+    "html-webpack-plugin": "^2.28.0",
     "html-webpack-plugin-htmlhint": "^0.0.2",
     "html-webpack-plugin-replaceurl": "^1.0.4",
-    "image-webpack-loader": "^2.0.0",
+    "image-webpack-loader": "^3.3.1",
     "inquirer": "^3.0.6",
-    "lodash": "^4.16.4",
+    "lodash": "^4.17.4",
     "ora": "^1.1.0",
-    "postcss": "^5.2.16",
-    "postcss-loader": "^1.3.3",
+    "postcss": "^6.0.1",
+    "postcss-loader": "^2.0.5",
     "postcss-sprites": "^4.0.0",
     "shelljs": "^0.7.4",
     "ssh2": "^0.5.4",
     "style-loader": "^0.13.1",
+    "uglify-js": "^2.8.28",
+    "uglifyjs-webpack-plugin": "^0.4.3",
     "url-loader": "^0.5.7",
-    "webpack": "^1.14.0",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-dev-server": "^1.16.2",
-    "webpack-hot-middleware": "^2.12.2",
-    "webpack-split-hash": "0.0.1",
-    "webpack-srcmap-plugin": "^0.0.2"
+    "webpack": "^2.6.1",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-split-hash": "0.0.1"
   },
   "devDependencies": {}
 }
