--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "homepage": "https://github.com/ihardcoder/boi-kernel#readme",
   "dependencies": {
-    "babel-core": "^6.17.0",
+    "autoprefixer": "^7.1.1",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
