--- a/package.json
+++ b/package.json
@@ -69,9 +69,7 @@
     "url-loader": "^0.5.7",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.2",
-    "webpack-dev-server": "^2.4.5",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-split-hash": "0.0.1"
+    "webpack-hot-middleware": "^2.18.0"
   },
   "devDependencies": {}
 }
