--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "boi-aux-rule-htmlhint": "0.0.1",
     "chalk": "^1.1.3",
     "cli-table2": "^0.2.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
     "eslint": "^3.16.1",
     "eslint-friendly-formatter": "^3.0.0",
