--- a/package.json
+++ b/package.json
@@ -23,14 +23,8 @@
   "homepage": "https://github.com/ihardcoder/boi-kernel#readme",
   "dependencies": {
     "autoprefixer": "^7.1.1",
-    "babel-core": "^6.25.0",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
-    "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
     "bluebird": "^3.4.6",
     "boi-aux-autoinstall": "^0.2.0",
     "boi-aux-rule-eslint": "0.0.4",
@@ -70,7 +64,7 @@
     "url-loader": "^0.5.7",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0"
-  },
-  "devDependencies": {}
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-merge": "^4.1.0"
+  }
 }
